--- a/serverless/package.json
+++ b/serverless/package.json
@@ -1,11 +1,6 @@
 {
     "name": "cdk",
     "version": "0.1.0",
-    "main": "bin/index.js",
-    "types": "bin/index.d.ts",
-    "bin": {
-        "cdk": "dist/root.js"
-    },
     "scripts": {
         "build": "tsc",
         "watch": "tsc -w",
@@ -14,24 +9,25 @@
     "devDependencies": {
         "@types/js-yaml": "^3.11.2",
         "@types/node": "^10.11.7",
-        "aws-cdk": "^0.12.0",
+        "aws-cdk": "^0.13.0",
         "tslint": "^5.11.0",
         "tslint-config-airbnb": "^5.11.0",
         "typescript": "^3.1.3"
     },
     "dependencies": {
-        "@aws-cdk/aws-apigateway": "^0.12.0",
-        "@aws-cdk/aws-cloudformation": "^0.12.0",
-        "@aws-cdk/aws-cloudfront": "^0.12.0",
-        "@aws-cdk/aws-codebuild": "^0.12.0",
-        "@aws-cdk/aws-codedeploy": "^0.12.0",
-        "@aws-cdk/aws-codepipeline": "^0.12.0",
-        "@aws-cdk/aws-cognito": "^0.12.0",
-        "@aws-cdk/aws-dynamodb": "^0.12.0",
-        "@aws-cdk/aws-iam": "^0.12.0",
-        "@aws-cdk/aws-lambda": "^0.12.0",
-        "@aws-cdk/aws-s3": "^0.12.0",
-        "@aws-cdk/cdk": "^0.12.0",
+        "@aws-cdk/aws-apigateway": "^0.13.0",
+        "@aws-cdk/aws-cloudformation": "^0.13.0",
+        "@aws-cdk/aws-cloudfront": "^0.13.0",
+        "@aws-cdk/aws-codebuild": "^0.13.0",
+        "@aws-cdk/aws-codecommit": "^0.13.0",
+        "@aws-cdk/aws-codedeploy": "^0.13.0",
+        "@aws-cdk/aws-codepipeline": "^0.13.0",
+        "@aws-cdk/aws-cognito": "^0.13.0",
+        "@aws-cdk/aws-dynamodb": "^0.13.0",
+        "@aws-cdk/aws-iam": "^0.13.0",
+        "@aws-cdk/aws-lambda": "^0.13.0",
+        "@aws-cdk/aws-s3": "^0.13.0",
+        "@aws-cdk/cdk": "^0.13.0",
         "aws-sdk": "^2.320.0",
         "js-yaml": "^3.12.0"
     }
