--- a/serverless/package.json
+++ b/serverless/package.json
@@ -4,30 +4,33 @@
     "scripts": {
         "build": "tsc",
         "watch": "tsc -w",
-        "app": "tsc && cdk deploy"
+        "app": "tsc && cdk deploy",
+        "cfn": "tsc && cdk synth --output cfn"
     },
     "devDependencies": {
         "@types/js-yaml": "^3.11.2",
         "@types/node": "^10.11.7",
-        "aws-cdk": "^0.13.0",
+        "aws-cdk": "^0.14.1",
+        "tsconfig-paths": "^3.6.0",
         "tslint": "^5.11.0",
         "tslint-config-airbnb": "^5.11.0",
-        "typescript": "^3.1.3"
+        "typescript": "^3.1.6"
     },
     "dependencies": {
-        "@aws-cdk/aws-apigateway": "^0.13.0",
-        "@aws-cdk/aws-cloudformation": "^0.13.0",
-        "@aws-cdk/aws-cloudfront": "^0.13.0",
-        "@aws-cdk/aws-codebuild": "^0.13.0",
-        "@aws-cdk/aws-codecommit": "^0.13.0",
-        "@aws-cdk/aws-codedeploy": "^0.13.0",
-        "@aws-cdk/aws-codepipeline": "^0.13.0",
-        "@aws-cdk/aws-cognito": "^0.13.0",
-        "@aws-cdk/aws-dynamodb": "^0.13.0",
-        "@aws-cdk/aws-iam": "^0.13.0",
-        "@aws-cdk/aws-lambda": "^0.13.0",
-        "@aws-cdk/aws-s3": "^0.13.0",
-        "@aws-cdk/cdk": "^0.13.0",
+        "@aws-cdk/aws-apigateway": "^0.14.1",
+        "@aws-cdk/aws-cloudformation": "^0.14.1",
+        "@aws-cdk/aws-cloudfront": "^0.14.1",
+        "@aws-cdk/aws-codebuild": "^0.14.1",
+        "@aws-cdk/aws-codecommit": "^0.14.1",
+        "@aws-cdk/aws-codedeploy": "^0.14.1",
+        "@aws-cdk/aws-codepipeline": "^0.14.1",
+        "@aws-cdk/aws-cognito": "^0.14.1",
+        "@aws-cdk/aws-dynamodb": "^0.14.1",
+        "@aws-cdk/aws-iam": "^0.14.1",
+        "@aws-cdk/aws-lambda": "^0.14.1",
+        "@aws-cdk/aws-s3": "^0.14.1",
+        "@aws-cdk/aws-s3-deployment": "^0.14.1",
+        "@aws-cdk/cdk": "^0.14.1",
         "aws-sdk": "^2.320.0",
         "js-yaml": "^3.12.0"
     }
