--- a/serverless/cfn/dev-Serverless-Cognito.template.yaml
+++ b/serverless/cfn/dev-Serverless-Cognito.template.yaml
@@ -1,165 +1,165 @@
 Resources:
-  UserPool:
-    Type: 'AWS::Cognito::UserPool'
-    Properties:
-      AdminCreateUserConfig:
-        AllowAdminCreateUserOnly: true
-        InviteMessageTemplate:
-          EmailMessage: |4-
+    UserPool:
+        Type: 'AWS::Cognito::UserPool'
+        Properties:
+            AdminCreateUserConfig:
+                AllowAdminCreateUserOnly: true
+                InviteMessageTemplate:
+                    EmailMessage: |4-
 
-                  <br />
-                  このメールはシステムにより自動配信されました。
-                  <br />
-                  システムにログインできることをご確認ください。
-                  ユーザID：{username}
-                  パスワード：{####}
-                  <br />
-                  【照会先】システム管理担当者  xxxxxxx@xxx.co.jp
-                  ※このメールアドレスは送信専用です。返信できませんので、ご注意ください。
-                
-          EmailSubject: ユーザーID登録完了のお知らせ
-        UnusedAccountValidityDays: 365
-      AutoVerifiedAttributes:
-        - email
-      EmailVerificationMessage: |4-
+                                  <br />
+                                  このメールはシステムにより自動配信されました。
+                                  <br />
+                                  システムにログインできることをご確認ください。
+                                  ユーザID：{username}
+                                  パスワード：{####}
+                                  <br />
+                                  【照会先】システム管理担当者  xxxxxxx@xxx.co.jp
+                                  ※このメールアドレスは送信専用です。返信できませんので、ご注意ください。
+                                
+                    EmailSubject: ユーザーID登録完了のお知らせ
+                UnusedAccountValidityDays: 365
+            AutoVerifiedAttributes:
+                - email
+            EmailVerificationMessage: |4-
 
-            <br />
-            このメールはシステムにより自動配信されました。
-            <br />
-            パスワード変更に必要な認証コードが発行されました。
-            認証コードは{####}です。
-            <br />
-            【照会先】システム管理担当者  xxxxxxx@xxx.co.jp
-            ※このメールアドレスは送信専用です。返信できませんので、ご注意ください。
-          
-      EmailVerificationSubject: パスワード変更認証コードのお知らせ
-      Policies:
-        PasswordPolicy:
-          MinimumLength: 8
-          RequireLowercase: true
-          RequireNumbers: true
-          RequireSymbols: false
-          RequireUppercase: false
-      Schema:
-        -
-          AttributeDataType: String
-          DeveloperOnlyAttribute: false
-          Mutable: true
-          Name: email
-          Required: true
-          StringAttributeConstraints:
-            MaxLength: '200'
-            MinLength: '0'
-      UserPoolName: dev-Serverless
-  UserPoolClient:
-    Type: 'AWS::Cognito::UserPoolClient'
-    Properties:
-      UserPoolId:
-        Ref: UserPool
-      ClientName: mobile-client
-      ExplicitAuthFlows:
-        - ADMIN_NO_SRP_AUTH
-      GenerateSecret: false
-      RefreshTokenValidity: 1
-  IdentityPoolResource:
-    Type: 'AWS::Cognito::IdentityPool'
-    Properties:
-      AllowUnauthenticatedIdentities: true
-      CognitoIdentityProviders:
-        -
-          ClientId:
-            Ref: UserPoolClient
-          ProviderName:
-            'Fn::GetAtt':
-              - UserPool
-              - ProviderName
-      IdentityPoolName: dev_Serverless
-  AuthenticatedRole86104F1A:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          -
-            Action: 'sts:AssumeRoleWithWebIdentity'
-            Condition:
-              StringEquals:
-                'cognito-identity.amazonaws.com:aud':
-                  Ref: IdentityPoolResource
-              'ForAnyValue:StringLike':
-                'cognito-identity.amazonaws.com:amr': authenticated
-            Effect: Allow
-            Principal:
-              Federated: cognito-identity.amazonaws.com
-        Version: '2012-10-17'
-      RoleName: dev-Serverless-Cognito-AuthenticatedRole
-  AuthenticatedPolicyE0CF12E2:
-    Type: 'AWS::IAM::Policy'
-    Properties:
-      PolicyDocument:
-        Statement:
-          -
-            Action:
-              - 'mobileanalytics:PutEvents'
-              - 'cognito-sync:*'
-              - 'cognito-identity:*'
-              - 'execute-api:Invoke'
-            Effect: Allow
-            Resource: '*'
-        Version: '2012-10-17'
-      PolicyName: dev-Serverless-AuthenticatedPolicy
-      Roles:
-        -
-          Ref: AuthenticatedRole86104F1A
-  UnauthenticatedRole01CC4258:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          -
-            Action: 'sts:AssumeRoleWithWebIdentity'
-            Condition:
-              StringEquals:
-                'cognito-identity.amazonaws.com:aud':
-                  Ref: IdentityPoolResource
-              'ForAnyValue:StringLike':
-                'cognito-identity.amazonaws.com:amr': unauthenticated
-            Effect: Allow
-            Principal:
-              Federated: cognito-identity.amazonaws.com
-        Version: '2012-10-17'
-      RoleName: dev-Serverless-Cognito-UnauthenticatedRole
-  UnauthenticatedPolicy07F4FBE4:
-    Type: 'AWS::IAM::Policy'
-    Properties:
-      PolicyDocument:
-        Statement:
-          -
-            Action:
-              - 'mobileanalytics:PutEvents'
-              - 'cognito-sync:*'
-            Effect: Allow
-            Resource: '*'
-        Version: '2012-10-17'
-      PolicyName: dev-Serverless-UnauthenticatedPolicy
-      Roles:
-        -
-          Ref: UnauthenticatedRole01CC4258
-  IdentityPoolRoleAttachmentResource:
-    Type: 'AWS::Cognito::IdentityPoolRoleAttachment'
-    Properties:
-      IdentityPoolId:
-        Ref: IdentityPoolResource
-      Roles:
-        unauthenticated:
-          'Fn::GetAtt':
-            - UnauthenticatedRole01CC4258
-            - Arn
-        authenticated:
-          'Fn::GetAtt':
-            - AuthenticatedRole86104F1A
-            - Arn
-  CDKMetadata:
-    Type: 'AWS::CDK::Metadata'
-    Properties:
-      Modules: >-
-        @aws-cdk/assets=0.14.1,@aws-cdk/aws-apigateway=0.14.1,@aws-cdk/aws-applicationautoscaling=0.14.1,@aws-cdk/aws-cloudfront=0.14.1,@aws-cdk/aws-cloudwatch=0.14.1,@aws-cdk/aws-codebuild=0.14.1,@aws-cdk/aws-codecommit=0.14.1,@aws-cdk/aws-codepipeline=0.14.1,@aws-cdk/aws-codepipeline-api=0.14.1,@aws-cdk/aws-cognito=0.14.1,@aws-cdk/aws-dynamodb=0.14.1,@aws-cdk/aws-ec2=0.14.1,@aws-cdk/aws-events=0.14.1,@aws-cdk/aws-iam=0.14.1,@aws-cdk/aws-kms=0.14.1,@aws-cdk/aws-lambda=0.14.1,@aws-cdk/aws-s3=0.14.1,@aws-cdk/aws-s3-notifications=0.14.1,@aws-cdk/aws-sqs=0.14.1,@aws-cdk/cdk=0.14.1,@aws-cdk/cx-api=0.14.1,cdk=0.1.0,esprima=4.0.1,js-yaml=3.12.0
+                      <br />
+                      このメールはシステムにより自動配信されました。
+                      <br />
+                      パスワード変更に必要な認証コードが発行されました。
+                      認証コードは{####}です。
+                      <br />
+                      【照会先】システム管理担当者  xxxxxxx@xxx.co.jp
+                      ※このメールアドレスは送信専用です。返信できませんので、ご注意ください。
+                    
+            EmailVerificationSubject: パスワード変更認証コードのお知らせ
+            Policies:
+                PasswordPolicy:
+                    MinimumLength: 8
+                    RequireLowercase: true
+                    RequireNumbers: true
+                    RequireSymbols: false
+                    RequireUppercase: false
+            Schema:
+                -
+                    AttributeDataType: String
+                    DeveloperOnlyAttribute: false
+                    Mutable: true
+                    Name: email
+                    Required: true
+                    StringAttributeConstraints:
+                        MaxLength: '200'
+                        MinLength: '0'
+            UserPoolName: dev-Serverless
+    UserPoolClient:
+        Type: 'AWS::Cognito::UserPoolClient'
+        Properties:
+            UserPoolId:
+                Ref: UserPool
+            ClientName: mobile-client
+            ExplicitAuthFlows:
+                - ADMIN_NO_SRP_AUTH
+            GenerateSecret: false
+            RefreshTokenValidity: 1
+    IdentityPoolResource:
+        Type: 'AWS::Cognito::IdentityPool'
+        Properties:
+            AllowUnauthenticatedIdentities: true
+            CognitoIdentityProviders:
+                -
+                    ClientId:
+                        Ref: UserPoolClient
+                    ProviderName:
+                        'Fn::GetAtt':
+                            - UserPool
+                            - ProviderName
+            IdentityPoolName: dev_Serverless
+    AuthenticatedRole86104F1A:
+        Type: 'AWS::IAM::Role'
+        Properties:
+            AssumeRolePolicyDocument:
+                Statement:
+                    -
+                        Action: 'sts:AssumeRoleWithWebIdentity'
+                        Condition:
+                            StringEquals:
+                                'cognito-identity.amazonaws.com:aud':
+                                    Ref: IdentityPoolResource
+                            'ForAnyValue:StringLike':
+                                'cognito-identity.amazonaws.com:amr': authenticated
+                        Effect: Allow
+                        Principal:
+                            Federated: cognito-identity.amazonaws.com
+                Version: '2012-10-17'
+            RoleName: dev-Serverless-Cognito-AuthenticatedRole
+    AuthenticatedPolicyE0CF12E2:
+        Type: 'AWS::IAM::Policy'
+        Properties:
+            PolicyDocument:
+                Statement:
+                    -
+                        Action:
+                            - 'mobileanalytics:PutEvents'
+                            - 'cognito-sync:*'
+                            - 'cognito-identity:*'
+                            - 'execute-api:Invoke'
+                        Effect: Allow
+                        Resource: '*'
+                Version: '2012-10-17'
+            PolicyName: dev-Serverless-AuthenticatedPolicy
+            Roles:
+                -
+                    Ref: AuthenticatedRole86104F1A
+    UnauthenticatedRole01CC4258:
+        Type: 'AWS::IAM::Role'
+        Properties:
+            AssumeRolePolicyDocument:
+                Statement:
+                    -
+                        Action: 'sts:AssumeRoleWithWebIdentity'
+                        Condition:
+                            StringEquals:
+                                'cognito-identity.amazonaws.com:aud':
+                                    Ref: IdentityPoolResource
+                            'ForAnyValue:StringLike':
+                                'cognito-identity.amazonaws.com:amr': unauthenticated
+                        Effect: Allow
+                        Principal:
+                            Federated: cognito-identity.amazonaws.com
+                Version: '2012-10-17'
+            RoleName: dev-Serverless-Cognito-UnauthenticatedRole
+    UnauthenticatedPolicy07F4FBE4:
+        Type: 'AWS::IAM::Policy'
+        Properties:
+            PolicyDocument:
+                Statement:
+                    -
+                        Action:
+                            - 'mobileanalytics:PutEvents'
+                            - 'cognito-sync:*'
+                        Effect: Allow
+                        Resource: '*'
+                Version: '2012-10-17'
+            PolicyName: dev-Serverless-UnauthenticatedPolicy
+            Roles:
+                -
+                    Ref: UnauthenticatedRole01CC4258
+    IdentityPoolRoleAttachmentResource:
+        Type: 'AWS::Cognito::IdentityPoolRoleAttachment'
+        Properties:
+            IdentityPoolId:
+                Ref: IdentityPoolResource
+            Roles:
+                unauthenticated:
+                    'Fn::GetAtt':
+                        - UnauthenticatedRole01CC4258
+                        - Arn
+                authenticated:
+                    'Fn::GetAtt':
+                        - AuthenticatedRole86104F1A
+                        - Arn
+    CDKMetadata:
+        Type: 'AWS::CDK::Metadata'
+        Properties:
+            Modules: >-
+                @aws-cdk/assets=0.14.1,@aws-cdk/aws-apigateway=0.14.1,@aws-cdk/aws-applicationautoscaling=0.14.1,@aws-cdk/aws-cloudfront=0.14.1,@aws-cdk/aws-cloudwatch=0.14.1,@aws-cdk/aws-codebuild=0.14.1,@aws-cdk/aws-codecommit=0.14.1,@aws-cdk/aws-codepipeline=0.14.1,@aws-cdk/aws-codepipeline-api=0.14.1,@aws-cdk/aws-cognito=0.14.1,@aws-cdk/aws-dynamodb=0.14.1,@aws-cdk/aws-ec2=0.14.1,@aws-cdk/aws-events=0.14.1,@aws-cdk/aws-iam=0.14.1,@aws-cdk/aws-kms=0.14.1,@aws-cdk/aws-lambda=0.14.1,@aws-cdk/aws-s3=0.14.1,@aws-cdk/aws-s3-notifications=0.14.1,@aws-cdk/aws-sqs=0.14.1,@aws-cdk/cdk=0.14.1,@aws-cdk/cx-api=0.14.1,cdk=0.1.0,deepmerge=2.2.1,esprima=4.0.1,js-yaml=3.12.0,json5=1.0.1,minimist=1.2.0,strip-bom=3.0.0,tsconfig-paths=3.6.0
