--- a/serverless/configs/lambda/template.yml
+++ b/serverless/configs/lambda/template.yml
@@ -27,7 +27,7 @@ Resources:
           Type: Api
           Properties:
             Path: /test/abc
-            Method: post
+            Method: POST
       Policies:
         Statement:
           -
