--- a/ec2-start-stop/package.json
+++ b/ec2-start-stop/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/js-yaml": "^3.11.2",
+    "@types/jszip": "^3.1.4",
     "@types/node": "^10.12.3",
+    "jszip": "^3.1.5",
     "tsconfig-paths": "^3.6.0",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.0",
