--- a/serverless/package.json
+++ b/serverless/package.json
@@ -8,29 +8,32 @@
         "cfn": "tsc && cdk synth --output cfn"
     },
     "devDependencies": {
+        "@types/aws-lambda": "^8.10.15",
         "@types/js-yaml": "^3.11.2",
-        "@types/node": "^10.11.7",
-        "aws-cdk": "^0.14.1",
+        "@types/jszip": "^3.1.4",
+        "@types/node": "^10.12.3",
+        "jszip": "^3.1.5",
         "tsconfig-paths": "^3.6.0",
         "tslint": "^5.11.0",
         "tslint-config-airbnb": "^5.11.0",
         "typescript": "^3.1.6"
     },
     "dependencies": {
-        "@aws-cdk/aws-apigateway": "^0.14.1",
-        "@aws-cdk/aws-cloudformation": "^0.14.1",
-        "@aws-cdk/aws-cloudfront": "^0.14.1",
-        "@aws-cdk/aws-codebuild": "^0.14.1",
-        "@aws-cdk/aws-codecommit": "^0.14.1",
-        "@aws-cdk/aws-codedeploy": "^0.14.1",
-        "@aws-cdk/aws-codepipeline": "^0.14.1",
-        "@aws-cdk/aws-cognito": "^0.14.1",
-        "@aws-cdk/aws-dynamodb": "^0.14.1",
-        "@aws-cdk/aws-iam": "^0.14.1",
-        "@aws-cdk/aws-lambda": "^0.14.1",
-        "@aws-cdk/aws-s3": "^0.14.1",
-        "@aws-cdk/aws-s3-deployment": "^0.14.1",
-        "@aws-cdk/cdk": "^0.14.1",
+        "@aws-cdk/aws-apigateway": "^0.15.2",
+        "@aws-cdk/aws-cloudformation": "^0.15.2",
+        "@aws-cdk/aws-cloudfront": "^0.15.2",
+        "@aws-cdk/aws-codebuild": "^0.15.2",
+        "@aws-cdk/aws-codecommit": "^0.15.2",
+        "@aws-cdk/aws-codedeploy": "^0.15.2",
+        "@aws-cdk/aws-codepipeline": "^0.15.2",
+        "@aws-cdk/aws-cognito": "^0.15.2",
+        "@aws-cdk/aws-dynamodb": "^0.15.2",
+        "@aws-cdk/aws-iam": "^0.15.2",
+        "@aws-cdk/aws-lambda": "^0.15.2",
+        "@aws-cdk/aws-s3": "^0.15.2",
+        "@aws-cdk/aws-s3-deployment": "^0.15.2",
+        "@aws-cdk/cdk": "^0.15.2",
+        "aws-lambda": "^0.1.2",
         "aws-sdk": "^2.320.0",
         "js-yaml": "^3.12.0"
     }
