--- a/3tier/package.json
+++ b/3tier/package.json
@@ -8,19 +8,40 @@
     "cfn": "tsc && cdk synth --output cfn"
   },
   "devDependencies": {
-    "@types/js-yaml": "^3.11.2",
+    "@types/js-yaml": "^3.11.4",
     "@types/jszip": "^3.1.4",
-    "@types/node": "^10.12.3",
+    "@types/node": "^10.12.18",
     "jszip": "^3.1.5",
-    "tsconfig-paths": "^3.6.0",
-    "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.11.0",
-    "typescript": "^3.1.6"
+    "tsconfig-paths": "^3.7.0",
+    "tslint": "^5.12.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "typescript": "^3.2.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^0.15.2",
-    "@aws-cdk/cdk": "^0.15.2",
-    "aws-sdk": "^2.320.0",
-    "js-yaml": "^3.12.0"
+    "@aws-cdk/assets": "^0.21.0",
+    "@aws-cdk/aws-autoscaling": "^0.21.0",
+    "@aws-cdk/aws-autoscaling-api": "^0.21.0",
+    "@aws-cdk/aws-cloudwatch": "^0.21.0",
+    "@aws-cdk/aws-codedeploy-api": "^0.21.0",
+    "@aws-cdk/aws-codepipeline-api": "^0.21.0",
+    "@aws-cdk/aws-ec2": "^0.21.0",
+    "@aws-cdk/aws-elasticloadbalancing": "^0.21.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^0.21.0",
+    "@aws-cdk/aws-events": "^0.21.0",
+    "@aws-cdk/aws-iam": "^0.21.0",
+    "@aws-cdk/aws-kms": "^0.21.0",
+    "@aws-cdk/aws-lambda": "^0.21.0",
+    "@aws-cdk/aws-logs": "^0.21.0",
+    "@aws-cdk/aws-route53": "^0.21.0",
+    "@aws-cdk/aws-s3": "^0.21.0",
+    "@aws-cdk/aws-s3-notifications": "^0.21.0",
+    "@aws-cdk/aws-sns": "^0.21.0",
+    "@aws-cdk/aws-sqs": "^0.21.0",
+    "@aws-cdk/aws-stepfunctions": "^0.21.0",
+    "@aws-cdk/cdk": "^0.21.0",
+    "@aws-cdk/cx-api": "^0.21.0",
+    "aws-sdk": "^2.384.0",
+    "install": "^0.12.2",
+    "js-yaml": "^3.12.1"
   }
 }
