--- a/3tier/package.json
+++ b/3tier/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
+    "update": "yarn upgrade -L",
+    "destroy": "yarn build && cdk destroy --require-approval broadening",
     "debug": "tsc && cdk deploy -v",
-    "app": "tsc && cdk deploy",
+    "app": "tsc && cdk deploy --require-approval broadening",
     "cfn": "tsc && cdk synth --output cfn"
   },
   "devDependencies": {
@@ -14,37 +16,38 @@
     "@types/node": "^10.12.18",
     "jszip": "^3.1.5",
     "tsconfig-paths": "^3.7.0",
-    "tslint": "^5.12.0",
+    "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "@aws-cdk/assets": "^0.21.0",
-    "@aws-cdk/aws-autoscaling": "^0.21.0",
-    "@aws-cdk/aws-autoscaling-api": "^0.21.0",
-    "@aws-cdk/aws-cloudfront": "^0.21.0",
-    "@aws-cdk/aws-cloudwatch": "^0.21.0",
-    "@aws-cdk/aws-codedeploy-api": "^0.21.0",
-    "@aws-cdk/aws-codepipeline-api": "^0.21.0",
-    "@aws-cdk/aws-ec2": "^0.21.0",
-    "@aws-cdk/aws-elasticloadbalancing": "^0.21.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^0.21.0",
-    "@aws-cdk/aws-events": "^0.21.0",
-    "@aws-cdk/aws-iam": "^0.21.0",
-    "@aws-cdk/aws-kms": "^0.21.0",
-    "@aws-cdk/aws-lambda": "^0.21.0",
-    "@aws-cdk/aws-logs": "^0.21.0",
+    "@aws-cdk/assets": "^0.22.0",
+    "@aws-cdk/aws-autoscaling": "^0.22.0",
+    "@aws-cdk/aws-autoscaling-api": "^0.22.0",
+    "@aws-cdk/aws-cloudformation": "^0.22.0",
+    "@aws-cdk/aws-cloudfront": "^0.22.0",
+    "@aws-cdk/aws-cloudwatch": "^0.22.0",
+    "@aws-cdk/aws-codedeploy-api": "^0.22.0",
+    "@aws-cdk/aws-codepipeline-api": "^0.22.0",
+    "@aws-cdk/aws-ec2": "^0.22.0",
+    "@aws-cdk/aws-elasticloadbalancing": "^0.22.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^0.22.0",
+    "@aws-cdk/aws-events": "^0.22.0",
+    "@aws-cdk/aws-iam": "^0.22.0",
+    "@aws-cdk/aws-kms": "^0.22.0",
+    "@aws-cdk/aws-lambda": "^0.22.0",
+    "@aws-cdk/aws-logs": "^0.22.0",
     "@aws-cdk/aws-rds": "^0.22.0",
-    "@aws-cdk/aws-route53": "^0.21.0",
-    "@aws-cdk/aws-s3": "^0.21.0",
-    "@aws-cdk/aws-s3-deployment": "^0.21.0",
-    "@aws-cdk/aws-s3-notifications": "^0.21.0",
-    "@aws-cdk/aws-sns": "^0.21.0",
-    "@aws-cdk/aws-sqs": "^0.21.0",
-    "@aws-cdk/aws-stepfunctions": "^0.21.0",
-    "@aws-cdk/cdk": "^0.21.0",
-    "@aws-cdk/cx-api": "^0.21.0",
-    "aws-sdk": "^2.384.0",
+    "@aws-cdk/aws-route53": "^0.22.0",
+    "@aws-cdk/aws-s3": "^0.22.0",
+    "@aws-cdk/aws-s3-deployment": "^0.22.0",
+    "@aws-cdk/aws-s3-notifications": "^0.22.0",
+    "@aws-cdk/aws-sns": "^0.22.0",
+    "@aws-cdk/aws-sqs": "^0.22.0",
+    "@aws-cdk/aws-stepfunctions": "^0.22.0",
+    "@aws-cdk/cdk": "^0.22.0",
+    "@aws-cdk/cx-api": "^0.22.0",
+    "aws-sdk": "^2.387.0",
     "js-yaml": "^3.12.1"
   }
 }
