--- a/3tier/package.json
+++ b/3tier/package.json
@@ -5,9 +5,17 @@
     "build": "tsc",
     "watch": "tsc -w",
     "update": "yarn upgrade -L",
-    "destroy": "yarn build && cdk destroy --require-approval broadening",
+    "dsty:asg": "cdk destroy dev-3Tier-AutoScaling --require-approval never",
+    "dsty:db": "cdk destroy dev-3Tier-DB --require-approval never",
+    "dsty:net": "cdk destroy dev-3Tier-Network --require-approval never",
+    "destroy": "yarn dsty:asg && yarn dsty:db && yarn dsty:net",
     "debug": "tsc && cdk deploy -v",
-    "app": "tsc && cdk deploy --require-approval broadening",
+    "web": " cdk deploy dev-3Tier-Web --require-approval never",
+    "asg": " cdk deploy dev-3Tier-AutoScaling --require-approval never",
+    "db": " cdk deploy dev-3Tier-DB --require-approval never",
+    "cdn": " cdk deploy dev-3Tier-CDN --require-approval never",
+    "net": " cdk deploy dev-3Tier-Network --require-approval never",
+    "root": "tsc && yarn net && yarn db && yarn asg",
     "cfn": "tsc && cdk synth --output cfn"
   },
   "devDependencies": {
