--- a/3tier/tsconfig.json
+++ b/3tier/tsconfig.json
@@ -23,6 +23,12 @@
     "strictPropertyInitialization": false,
     "baseUrl": ".",
     "paths": {
+      "@network": [
+        "./src/network"
+      ],
+      "@asg": [
+        "./src/asg"
+      ],
       "@web": [
         "./src/web"
       ],
